# MLFQ-Scheduling

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  build_web.sh  demo_web_gui.sh  test_web_improvements.md
docs/: CONFIGURATION_GUIDE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  STRUCTURE.md  TECHNICAL.md  WebServer_Documentation.md
include/: FLTKVisualizer.h  MLFQScheduler.h  Process.h  Queue.h  SchedulerConfig.h  TerminalUI.h  Visualizer.h  WebServer.h
logs/openai/: openai-2025-12-11T11-05-21.237Z-100105d4.json  openai-2025-12-11T11-05-24.805Z-bca07bb7.json  openai-2025-12-11T11-05-27.400Z-a409fd4d.json  openai-2025-12-11T11-05-36.477Z-f043d8df.json  openai-2025-12-11T11-05-40.510Z-7a5a1a66.json  openai-2025-12-11T11-05-45.137Z-428c7a21.json  openai-2025-12-11T11-05-51.977Z-ddfbcf2c.json  openai-2025-12-11T11-05-58.077Z-e8fbe72d.json  openai-2025-12-11T11-06-04.278Z-03b0e228.json  openai-2025-12-11T11-06-11.660Z-69d47dfb.json  openai-2025-12-11T11-06-20.261Z-2c6e837d.json  openai-2025-12-11T11-06-27.935Z-54e84d50.json  openai-2025-12-11T11-06-35.289Z-aa8cda68.json  openai-2025-12-11T11-06-41.692Z-da622b65.json  openai-2025-12-11T11-06-49.134Z-6db01478.json  openai-2025-12-11T11-06-57.848Z-eb0c3112.json  openai-2025-12-11T11-07-03.600Z-847793c0.json  openai-2025-12-11T11-07-17.089Z-ddf6fd23.json  openai-2025-12-11T11-07-25.387Z-29752fa0.json  openai-2025-12-11T11-07-37.018Z-c2b35a9c.json  openai-2025-12-11T11-07-51.654Z-e11cab6e.json  openai-2025-12-11T11-08-04.376Z-c8d4190e.json  openai-2025-12-11T11-08-30.467Z-cc40d7cd.json  openai-2025-12-11T11-08-44.237Z-c0f44745.json  openai-2025-12-11T11-10-47.723Z-7eddab94.json  openai-2025-12-11T11-15-27.111Z-4e512f48.json  openai-2025-12-11T11-18-58.933Z-846f1dd1.json  openai-2025-12-11T11-36-42.934Z-ca4b9c61.json  openai-2025-12-11T11-36-57.426Z-1f72643c.json  openai-2025-12-11T11-37-14.746Z-c2d0b659.json  openai-2025-12-11T11-37-24.936Z-59890f94.json  openai-2025-12-11T11-37-41.359Z-b52a1950.json  openai-2025-12-11T11-38-04.231Z-e1951930.json  openai-2025-12-11T11-38-21.434Z-8e50c9de.json  openai-2025-12-11T11-38-44.858Z-d5809f7d.json  openai-2025-12-11T11-39-00.935Z-93e8ab52.json  openai-2025-12-11T11-39-21.165Z-527bb8f7.json  (+13 more)
src/: FLTKVisualizer.cpp  MLFQScheduler.cpp  Process.cpp  Queue.cpp  Visualizer.cpp  WebServer.cpp  main.cpp
tests/: test_scheduler.cpp
web_gui/: README.md  index.html  script.js  styles.css
